@startuml raftStateDiagram

skinparam defaultFontSize 16
left to right direction

[*] --> Follower: starts up

Candidate --> Follower: discovers current\nleader or new term
Follower --> Candidate: times out,\nstarts election

Candidate --> Candidate: times out,\nnew election

Candidate --> Leader: receives votes from\nthe majority of servers
Leader --> Follower: discovers server\nwith higher term

@enduml
